--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.bitsden.com"
+baseURL = "https://blog.bitsden.com/"
 languageCode = "en-gb"
 title = "Marcus Ramsden"
 theme = "ezhil"
