--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           ./hugo -v
       - name: Deploy to S3
         if: github.ref == 'refs/heads/master'
-        run: ./hugo -v deploy --maxDeletes -1
+        run: ./hugo -v deploy --invalidateCDN
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
