--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ pygmentscodefences = true
 [params]
 subtitle = "A software engineer"
 
-mainSections = ["posts"]
+mainSections = ["post"]
 
 featherIconsCDN = true
 
